[#60] Fix floating box issue on Firefox.
* Add appropriate CSS selector
* Run sass --watch to move into css file.
* Fixes #60
* Fixes #62

--- a/public/stylesheets/sass/_versions.scss
+++ b/public/stylesheets/sass/_versions.scss
@@ -21,6 +21,7 @@ li {
     padding: 8px;
     margin-bottom: 0;
     width: 580px;
+    clear: left;
     @include box-shadow(inset 0 0 5px #e9e9e9);
 
     .wysiwyg {
